# natoolkit

./: .gitignore  README.md  pyproject.toml
natoolkit/: napari.yaml
natoolkit/tools/activity_sleep_state_aligner/: README.md  __init__.py  core.py  gui.py
natoolkit/tools/activity_tracer/: __init__.py  activity_tracer.py  gui.py  models.py  movie_manager.py  plot.py  processing.py  roi.py  suite2p_adapter.py  suite2p_dialogs.py
natoolkit/tools/sleep_state_staging/: README.md  __init__.py  alignment.py  cli.py  gui.py  io.py  preprocess.py  qc.py  staging.py
