[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "natoolkit"
version = "0.1.0"
description = "Lab tools for neural activity data analysis."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "dask[array]",
    "matplotlib",
    "napari[pyqt6]",
    "numpy",
    "pyqtgraph",
    "qtpy",
    "scipy",
    "tifffile",
]

[project.optional-dependencies]
suite2p = ["suite2p>=1.1,<2"]

[project.scripts]
activity-tracer = "natoolkit.tools.activity_tracer.gui:main"
activity-sleep-state-aligner = "natoolkit.tools.activity_sleep_state_aligner.gui:main"
sleep-state-staging = "natoolkit.tools.sleep_state_staging.gui:main"

[project.entry-points."napari.manifest"]
natoolkit = "natoolkit:napari.yaml"

[tool.setuptools.packages.find]
include = ["natoolkit*"]

[tool.setuptools.package-data]
natoolkit = ["napari.yaml"]
